add --add-exports=java.base/jdk.internal.util=ALL-UNNAMED to notarb_java.sh